Added VRAM allocator (thanks to libctru). Overhaul of gfx.c.

--- a/arm11/Makefile
+++ b/arm11/Makefile
@@ -18,7 +18,9 @@ include $(DEVKITARM)/base_rules
 #---------------------------------------------------------------------------------
 #TARGET		:=	$(notdir $(CURDIR))
 BUILD		:=	build
-SOURCES		:=	../source ../source/hardware ../source/arm11 ../source/arm11/hardware
+SOURCES		:=	../source ../source/hardware ../source/arm11 \
+				../source/arm11/allocator ../source/arm11/hardware \
+				../source/arm11/util/rbtree
 DATA		:=
 INCLUDES	:=	../include
 DEFINES		:=	-DARM11 -D_3DS -DVERS_STRING=\"$(VERS_STRING)\" \
