Enabled more debugging techniques by default in debug builds. Added more Arm intrinsics. ARM7 stub now waits for REG_VCOUNT == 126 (same as after BIOS intro). Enable ROM mirroring for all 8 Mbit games instead of just Classic NES Series. Other misc. changes.

--- a/arm11/Makefile
+++ b/arm11/Makefile
@@ -36,17 +36,23 @@ endif
 #---------------------------------------------------------------------------------
 ARCH	:=	-march=armv6k+vfpv2 -mtune=mpcore -mfloat-abi=hard -mtp=soft -marm -mthumb-interwork
 
-CFLAGS	:=	$(ARCH) -std=gnu17 -O2 -g -flto -mword-relocations -ffunction-sections \
-			-fno-math-errno -Wall -Wextra -Wno-unused-function
+CFLAGS	:=	$(ARCH) -std=c17 -O2 -g -flto -mword-relocations \
+			-ffunction-sections -fno-math-errno -Wall -Wextra
 CFLAGS	+=	$(INCLUDE) $(DEFINES)
 
 CXXFLAGS	:=	$(ARCH) -std=c++17 -O2 -g -flto -fno-rtti -fno-exceptions \
-				-mword-relocations -ffunction-sections -fno-math-errno -Wall -Wextra \
-				-Wno-unused-function
+				-mword-relocations -ffunction-sections -fno-math-errno -Wall -Wextra
 CXXFLAGS	+=	$(INCLUDE) $(DEFINES)
 
 ASFLAGS	:=	$(ARCH) -g -flto $(INCLUDE) $(DEFINES)
 LDFLAGS	=	$(ARCH) -g -flto -specs=../arm11.specs -Wl,-Map,$(notdir $*.map) -nostartfiles
+
+ifeq ($(strip $(NO_DEBUG)),)
+	CFLAGS	:=	$(subst -flto,,$(CFLAGS)) -fstack-protector-strong -fno-inline
+	CXXFLAGS	:=	$(subst -flto,,$(CXXFLAGS)) -fstack-protector-strong -fno-inline
+	ASFLAGS	:=	$(subst -flto,,$(ASFLAGS))
+	LDFLAGS	:=	$(subst -flto,,$(LDFLAGS)) -fstack-protector-strong -fno-inline -Wl,-wrap=malloc,-wrap=calloc,-wrap=free
+endif
 
 LIBS	:=	-lm
 
@@ -188,4 +194,3 @@ endef
 
 #---------------------------------------------------------------------------------------
 endif
-#---------------------------------------------------------------------------------------
