Added basic config file support (thanks to benhoyt for his inih lib).

--- a/arm11/Makefile
+++ b/arm11/Makefile
@@ -20,9 +20,9 @@ include $(DEVKITARM)/base_rules
 BUILD		:=	build
 SOURCES		:=	../kernel/source ../source ../source/hardware ../source/arm11 \
 				../source/arm11/allocator ../source/arm11/hardware \
-				../source/arm11/util/rbtree
+				../source/arm11/util/rbtree ../thirdparty/inih
 DATA		:=
-INCLUDES	:=	../kernel/include ../include
+INCLUDES	:=	../kernel/include ../include ../thirdparty
 DEFINES		:=	-DARM11 -D_3DS -DVERS_STRING=\"$(VERS_STRING)\" \
 				-DVERS_MAJOR=$(VERS_MAJOR) -DVERS_MINOR=$(VERS_MINOR)
 ASSETS		:=
