--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 arm9/build/
 arm11/build/
 eclipse_project/
+open_agb_firm/
 *.sublime-project
 *.sublime-workspace
 arm9/open_agb_firm9.bin
 arm11/open_agb_firm11.bin
 arm9/open_agb_firm9.elf
 arm11/open_agb_firm11.elf
-resources/gba.dat
-resources/gba.xml
+tools/gba_db_builder/gba_db.bin
 open_agb_firm.firm
 open_agb_firm*.7z
