--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ arm9/open_agb_firm9.elf
 arm11/open_agb_firm11.elf
 tools/gba_db_builder/gba_db.bin
 open_agb_firm.firm
-open_agb_firm*.7z
+open_agb_firm*.zip
