--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ arm9/open_agb_firm9.bin
 arm11/open_agb_firm11.bin
 arm9/open_agb_firm9.elf
 arm11/open_agb_firm11.elf
-tools/gba_db_builder/gba_db.bin
+tools/eeprom-fixer/*.sav
+tools/gba-db-builder/gba_db.bin
+tools/gba-db-builder/gba.dat
+tools/gba-db-builder/gba.xml
 open_agb_firm.firm
 open_agb_firm*.7z
