--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
+.sublimetext/
+.vscode/
 arm9/build/
 arm11/build/
 eclipse_project/
-*.sublime-project
-*.sublime-workspace
 arm9/open_agb_firm9.bin
 arm11/open_agb_firm11.bin
 arm9/open_agb_firm9.elf
@@ -12,3 +12,4 @@ tools/gba-db-builder/gba.dat
 tools/gba-db-builder/gba.xml
 open_agb_firm.firm
 open_agb_firm*.7z
+TODO.txt
