Moved open_agb_firm specific error codes and error printing out of libn3ds.

--- a/arm11/Makefile
+++ b/arm11/Makefile
@@ -19,7 +19,7 @@ include $(TOPDIR)/../libn3ds/libn3ds11.mk
 #---------------------------------------------------------------------------------
 #TARGET		:=	$(notdir $(CURDIR))
 BUILD		:=	build
-SOURCES		+=	../source/arm11 ../libraries/inih
+SOURCES		+=	../source ../source/arm11 ../libraries/inih
 DATA		:=
 INCLUDES	+=	../include ../libraries
 DEFINES		:=	-DARM11 -D_3DS -DVERS_STRING=\"$(VERS_STRING)\" \
