Moved libn3ds to libraries/libn3ds. Include libn3ds license in releases and nightlies.

--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -8,7 +8,7 @@ endif
 
 TOPDIR ?= $(CURDIR)
 include $(DEVKITARM)/base_rules
-include $(TOPDIR)/../libn3ds/libn3ds9.mk
+include $(TOPDIR)/../libraries/libn3ds/libn3ds9.mk
 
 #---------------------------------------------------------------------------------
 # TARGET is the name of the output
