--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libn3ds"]
-	path = libn3ds
-	url = https://github.com/profi200/libn3ds
+[submodule "libraries/libn3ds"]
+	path = libraries/libn3ds
+	url = https://github.com/profi200/libn3ds.git
