--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,8 +25,11 @@ jobs:
         apt-get -y install gcc
 
     - name: Build ctr_firm_builder
+      uses: actions/checkout@v3
+      with:
+        repository: derrekr/ctr_firm_builder
+        path: ctr_firm_builder
       run: |
-        git clone --depth 1 --recurse-submodules https://github.com/derrekr/ctr_firm_builder.git
         cd ctr_firm_builder
         make
 
