--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ arm9/open_agb_firm9.bin
 arm11/open_agb_firm11.bin
 arm9/open_agb_firm9.elf
 arm11/open_agb_firm11.elf
-tools/gba-db-builder/gba_db.bin
-tools/gba-db-builder/gba.dat
-tools/gba-db-builder/gba.xml
+tools/gba-db/gba_db.log
+tools/gba-db/gba.xml
+tools/gba-db/gba.dat
+tools/gba-db/gba_db.bin
 open_agb_firm.firm
 open_agb_firm*.7z
 TODO.txt
