Use glob matching in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-.sublimetext/
-.vscode/
-arm9/build/
-arm11/build/
-eclipse_project/
-arm9/open_agb_firm9.bin
-arm11/open_agb_firm11.bin
-arm9/open_agb_firm9.elf
-arm11/open_agb_firm11.elf
-tools/gba-db/gba_db.log
-tools/gba-db/gba.xml
-tools/gba-db/gba.dat
-tools/gba-db/gba_db.bin
-open_agb_firm.firm
-open_agb_firm*.7z
-TODO.txt
+/.*
+!/.git*
+/arm[19]*/build/
+/arm[19]*/open_agb_firm[19]*.*
+/tools/gba-db/gba_db.*
+!/tools/gba-db/gba_db.py
+/tools/gba-db/gba.*
+!/tools/gba-db/gba.csv
+/open_agb_firm*.*
